--- a/src/components/PokemonList/PokemonList.css
+++ b/src/components/PokemonList/PokemonList.css
@@ -1,3 +1,16 @@
 .pokemon-list-wrapper{
   margin: 2rem auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.pokemon-wrapper{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  height: 400px;
+}
+.controls button{
+  padding: 0.5rem 1rem;
+  margin-left: 1rem;
 }
