--- a/src/components/PokemonList/PokemonList.css
+++ b/src/components/PokemonList/PokemonList.css
@@ -1,16 +1,23 @@
-.pokemon-list-wrapper{
+.pokemon-list-wrapper {
   margin: 2rem auto;
   display: flex;
   flex-direction: column;
   align-items: center;
+  
 }
-.pokemon-wrapper{
+
+.pokemon-wrapper {
   display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-between;
-  height: 400px;
+  justify-content: space-evenly;
 }
-.controls button{
-  padding: 0.5rem 1rem;
+
+
+.controls button {
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
   margin-left: 1rem;
 }
